# RingDownAnalysis

./: .gitignore  OOP_STRUCTURE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  pyproject.toml
benchmarks/: README.md  __init__.py  benchmark_suite.py  profile_utils.py  run_benchmarks.py  run_profiling.py
docs/tn/: Makefile  generate_figures.py  main.tex
examples/: batch_analysis_example.py  benchmark.py  crlb_scaling_figures.py  logging_config_example.py  usage_example.py
notebooks/: analysis_example.ipynb  batch_analysis_example.ipynb  legacy-rda-notebook.ipynb
ringdownanalysis/: __init__.py  analyzer.py  batch_analyzer.py  compat.py  crlb.py  data_loader.py  estimators.py  legacy_ring_down_mc.py  monte_carlo.py  plots.py  signal.py
tests/: test_batch_analysis_methods.py  test_batch_analyzer.py  test_compat.py  test_crlb.py  test_estimators.py  test_signal.py
